[gd_scene load_steps=13 format=3 uid="uid://ng5paan00u7q"]

[ext_resource type="Script" path="res://GameScreen/GameScreen.gd" id="1_7246j"]
[ext_resource type="PackedScene" uid="uid://b150me7q4mai6" path="res://IngredientShop/IngredientShop.tscn" id="1_rjsp4"]
[ext_resource type="PackedScene" uid="uid://jkkbvs4glc6a" path="res://DialogueScene/DialougeScene.tscn" id="2_folb2"]
[ext_resource type="PackedScene" uid="uid://bjjh4ek2nurc2" path="res://IngredientCauldron/IngredientCauldron.tscn" id="3_acnkb"]
[ext_resource type="PackedScene" uid="uid://mio3p1jkorlo" path="res://PotionActions/PotionActions.tscn" id="3_ckwqu"]
[ext_resource type="Texture2D" uid="uid://cauyw6kit6bla" path="res://assets/img_bg/bg_potion.png" id="3_yc3a2"]
[ext_resource type="Resource" uid="uid://coo1hyaa5yjl8" path="res://Ingredients/Shoe.tres" id="5_6y2wc"]
[ext_resource type="Resource" uid="uid://ci6b02qt4shj5" path="res://Ingredients/Crystal.tres" id="6_ei6r1"]
[ext_resource type="Resource" uid="uid://bkol28rs1ihs7" path="res://Ingredients/Cinnamon.tres" id="7_ajbxm"]
[ext_resource type="Resource" uid="uid://cmkvno4v8chtj" path="res://Ingredients/Plant.tres" id="8_qx850"]
[ext_resource type="Resource" uid="uid://c1h76kmn08psi" path="res://Ingredients/Book.tres" id="9_u0ocq"]
[ext_resource type="Resource" uid="uid://btj11po3y5ajd" path="res://Ingredients/Candy.tres" id="10_habhq"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7246j")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialougeScene" parent="HBox" instance=ExtResource("2_folb2")]
layout_mode = 2

[node name="PotionBackground" type="TextureRect" parent="HBox"]
custom_minimum_size = Vector2(1280, 1080)
layout_mode = 2
texture = ExtResource("3_yc3a2")

[node name="PotionSection" type="VBoxContainer" parent="HBox/PotionBackground"]
custom_minimum_size = Vector2(1280, 1080)
layout_mode = 1
offset_right = 1284.0
offset_bottom = 1080.0

[node name="IngredientShop" parent="HBox/PotionBackground/PotionSection" instance=ExtResource("1_rjsp4")]
custom_minimum_size = Vector2(1280, 640)
layout_mode = 2
size_flags_vertical = 3
ingredients = Array[Resource("res://Ingredient/Ingredient.gd")]([ExtResource("5_6y2wc"), ExtResource("6_ei6r1"), ExtResource("7_ajbxm"), ExtResource("8_qx850"), ExtResource("9_u0ocq"), ExtResource("10_habhq")])

[node name="PotionSectionBottom" type="HBoxContainer" parent="HBox/PotionBackground/PotionSection"]
custom_minimum_size = Vector2(1280, 0)
layout_mode = 2

[node name="PotionActions" parent="HBox/PotionBackground/PotionSection/PotionSectionBottom" instance=ExtResource("3_ckwqu")]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2

[node name="IngredientCauldron" parent="HBox/PotionBackground/PotionSection/PotionSectionBottom" instance=ExtResource("3_acnkb")]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2

[connection signal="s_brew_button_pressed" from="HBox/PotionBackground/PotionSection/PotionSectionBottom/PotionActions" to="." method="_on_brew_button_pressed"]
[connection signal="s_clear_button_pressed" from="HBox/PotionBackground/PotionSection/PotionSectionBottom/PotionActions" to="." method="_on_clear_button_pressed"]
